packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_renamed_exports.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$ as Component, $ as onRender, useStore } from '@decoration/qwik';

export const App = Component((props) => {
    const state = useStore({thing: 0});

    return onRender(() => (
        <div>{state.thing}</div>
    ));
});

============================= test.js ==

import { componentQrl } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./app_component_nuxfthrjvxe"), "App_Component_NuXFTHRjvXE"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM,wGAMhB\"}")
============================= app_component_1_a08txhb9pek.js (ENTRY POINT)==

import { useLexicalScope } from "@decoration/qwik";
import { _fnSignal } from "@decoration/qwik";
import { _jsxQ } from "@decoration/qwik";
export const App_Component_1_A08tXHb9pEk = ()=>{
    const [state] = useLexicalScope("App_Component_1_A08tXHb9pEk");
    return /*#__PURE__*/ _jsxQ("div", null, null, _fnSignal((p0)=>p0.thing, [
        state
    ], "p0.thing"), 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;2CAMoB;;yBACZ,MAAC,mCAAK,GAAM,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_Component_1_A08tXHb9pEk",
  "entry": null,
  "displayName": "App_Component_1",
  "hash": "A08tXHb9pEk",
  "canonicalFilename": "app_component_1_a08txhb9pek",
  "extension": "js",
  "parent": "App_Component_NuXFTHRjvXE",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    191,
    237
  ]
}
*/
============================= app_component_nuxfthrjvxe.js (ENTRY POINT)==

import { qrl } from "@decoration/qwik";
import { useStore } from "@decoration/qwik";
export const App_Component_NuXFTHRjvXE = (props)=>{
    const state = useStore({
        thing: 0
    });
    return /*#__PURE__*/ qrl(()=>import("./app_component_1_a08txhb9pek"), "App_Component_1_A08tXHb9pEk", [
        state
    ]);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;yCAG6B,CAAC,QAAU;IACpC,MAAM,QAAQ,SAAS;QAAC,OAAO;IAAC;IAEhC;;;AAGJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_Component_NuXFTHRjvXE",
  "entry": null,
  "displayName": "App_Component",
  "hash": "NuXFTHRjvXE",
  "canonicalFilename": "app_component_nuxfthrjvxe",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    117,
    241
  ]
}
*/
== DIAGNOSTICS ==

[]
