packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_ts_enums.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, useStore } from '@decoration/qwik';

export enum Thing {
    A,
    B
}

export const App = component$(() => {
    console.log(Thing.A);
    return (
        <>
            <p class="stuff">Hello Qwik</p>
        </>
    );
});

============================= test.js ==

import { componentQrl } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
export let Thing;
(function(Thing) {
    Thing[Thing["A"] = 0] = "A";
    Thing[Thing["B"] = 1] = "B";
})(Thing || (Thing = {}));
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./app_component_ckepmxzlub0"), "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;WAGO;UAAK,KAAK;IAAL,MAAA,MACR,OAAA,KAAA;IADQ,MAAA,MAER,OAAA,KAAA;GAFQ,UAAA;AAKZ,OAAO,MAAM,oBAAM,wGAOhB\"}")
============================= app_component_ckepmxzlub0.js (ENTRY POINT)==

import { Thing } from "./test";
import { Fragment as _Fragment } from "@decoration/qwik/jsx-runtime";
import { _jsxC } from "@decoration/qwik";
import { _jsxQ } from "@decoration/qwik";
export const App_component_ckEPmXZlub0 = ()=>{
    console.log(Thing.A);
    return /*#__PURE__*/ _jsxC(_Fragment, {
        children: /*#__PURE__*/ _jsxQ("p", null, {
            class: "stuff"
        }, "Hello Qwik", 3, null)
    }, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;yCAQ8B,IAAM;IAChC,QAAQ,GAAG,CAAC,MAAM,CAAC;IACnB,qBACI;kBACI,cAAA,MAAC;YAAE,OAAM;WAAQ;;AAG7B\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "app_component_ckepmxzlub0",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    126,
    248
  ]
}
*/
== DIAGNOSTICS ==

[]
